refactor: avoid update css directly in scrollFunction()

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 </head>
 
 <body>
-    <header id="mobile-header" style="background-color:transparent;">
+    <header id="mobile-header" class="bg-transparent">
         <div class="mobile-navigation flex-aic-jcsb" >
             <a class="button" href="donate.html">Donate</a>
             <a class="logo" href="index.html"><img src="./images/logo.png" alt="future for children logo" width="80" height="80"></a>
 
             <input id="toggle" type="checkbox">
                 <label for="toggle" class="hamburger">
-                    <div id="bun" class="top-bun"></div>
-                    <div id="bun2" class="bottom-bun"></div>
+                    <div id="top-bun" class="top-bun"></div>
+                    <div id="bottom-bun" class="bottom-bun"></div>
                 </label>
             </input>
             <div class="nav">
